...
        android:layout_marginStart="20dp"
        android:text="@string/enter_site_url"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:focusableInTouchMode="true"
        app:errorEnabled="true">

        <com.skydrm.rmc.ui.widget.ClearableEditText
            android:id="@+id/et_url_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:hint="@string/hint_url_input"
            android:imeOptions="flagNoExtractUi"
            android:labelFor="@+id/et_url_input"
...
