...
        android:layout_height="2dip"
        android:progressDrawable="@drawable/progress_bar_style"
        android:visibility="gone"
        />

    <WebView
        android:id="@+id/login_webView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center" />

</LinearLayout>

